@@ -49,6 +49,10 @@
    - pvalchev@cvs.openbsd.org 2001/06/05 05:05:39
      [ssh-keyscan.1 ssh-keyscan.c]
      License clarification from David Mazieres, ok deraadt@
+   - markus@cvs.openbsd.org 2001/06/05 10:24:32
+     [channels.c]
+     don't delete the auth socket in channel_stop_listening()
+     auth_sock_cleanup_proc() will take care of this.
 
 20010606
  - OpenBSD CVS Sync
@@ -5560,4 +5564,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1261 2001/06/09 01:30:39 mouring Exp $
+$Id: ChangeLog,v 1.1262 2001/06/09 01:32:29 mouring Exp $
